# alma

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  TDD_SUMMARY.md  compose.yml  docker-compose.metrics.yml  grafana-dashboard.json  idea.txt  install.sh  package-lock.json  package.json  plan.txt  pyproject-dev.toml  pyproject.toml  rebrand.sh  run_server.py  stream_n_check.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: build-packages.yml  ci.yml  deploy-docs.yml  docs.yml  publish.yml
ai_cdn/: __init__.py
ai_cdn/api/: main.py
ai_cdn/cli/: dashboard.py  main.py
ai_cdn/core/: cognitive.py  config.py  database.py  llm.py  llm_orchestrator.py  llm_qwen.py  llm_service.py  prompts.py  state.py  templates.py  tools.py
ai_cdn/engines/: base.py  fake.py  kubernetes.py  proxmox.py
ai_cdn/middleware/: __init__.py  metrics.py
ai_cdn/schemas/: blueprint.py  ipr.py
alembic/: env.py
alembic/versions/: 20250116_0100-initial_migration.py  20250116_0200-add_ipr_table.py
alma/: __init__.py  mcp_server.py
alma-web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
alma-web/src/: App.jsx
alma/api/: main.py  websocket_manager.py
alma/cli/: council.py  dashboard.py  main.py  templates.py
alma/config/: blueprints.yaml  resource_specs.yaml  tools.json
alma/core/: cognitive.py  config.py  cqrs.py  database.py  error_handling.py  events.py  exceptions.py  immune_system.py  llm.py  llm_orchestrator.py  llm_qwen.py  llm_service.py  prompts.py  resilience.py  saga.py  state.py  templates.py  tools.py
alma/engines/: __init__.py  ansible.py  base.py  docker.py  fake.py  kubernetes.py  proxmox.py  simulation.py  terraform.py
alma/integrations/: __init__.py  pricing.py
alma/middleware/: __init__.py  auth.py  idempotency.py  immune.py  metrics.py  rate_limit.py
alma/models/: __init__.py  blueprint.py  event.py  ipr.py  saga.py  view.py
alma/schemas/: __init__.py  blueprint.py  council.py  ipr.py  tool_args.py  tools.py
config/: prometheus.yml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  BLUEPRINTS.md  COGNITIVE_GUIDE.md  ENGINES.md  INDEX.md  IPR.md  LLM_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_RATE_LIMITS.md  RATE_LIMITING_AND_METRICS.md  RELEASE_GUIDE.md  STREAMING_AND_TEMPLATES.md  TOOLS_API.md  USER_GUIDE.md  index.md
docs/.vitepress/: config.ts
docs/ADR/: 001-event-sourcing.md  002-saga-pattern.md  README.md
examples/: example-blueprint.yaml  streaming_client.py
examples/blueprints/: microservices-cluster.yaml  simple-web-app.yaml
scripts/: diagnose_proxmox.py  generate_grafana_dashboard.py  list_proxmox.py  migrate.py  test_download.py  test_mcp_ops.py  verify_ahimsa.py  verify_connectivity.py  verify_deep.py  verify_resilience.py  verify_resiliency.py
src/aicdn/: __init__.py
tests/: __init__.py  conftest.py  fakes.py  load_test.py  verify_async_llm.py  verify_auth_hashing.py  verify_rate_limit.py  verify_resilience.py  verify_templates.py  verify_tools.py
(+87 files in other folders)
